--- a/package.json
+++ b/package.json
@@ -3,22 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^1.4.2",
     "@mui/material": "^5.11.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "docxtemplater": "^3.37.11",
+    "file-saver": "^2.0.5",
+    "formula-parser": "^2.0.1",
+    "html-docx-js": "^0.3.1",
+    "html-react-parser": "^4.0.0",
+    "install": "^0.13.0",
+    "jszip": "^3.10.1",
+    "mammoth": "^1.6.0",
+    "mathjs": "^9.5.2",
+    "pdfjs-dist": "^2.7.570",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
+    "react-feather": "^2.0.10",
+    "react-pdf": "^7.1.1",
     "react-responsive-video": "^1.3.1",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.1",
+    "react-router-dom": "^6.12.1",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.5.0",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -44,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "path-browserify": "^1.0.1",
     "tailwindcss": "^3.2.7"
   }
 }
