--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.15",
     "axios": "^1.3.4",
     "docxtemplater": "^3.37.11",
     "file-saver": "^2.0.5",
@@ -37,7 +38,6 @@
     "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -64,6 +64,6 @@
   },
   "devDependencies": {
     "path-browserify": "^1.0.1",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.3.3"
   }
 }
